# RAG-MCP

./: .gitignore  .mcp.json  DEV_SPEC.md  README.md  main.py  project-overview.html  pyproject.toml  run_dashboard.py  start_mcp_server.py
.claude/: mcp.json  settings.json  settings.local.json
code-viz/: package-lock.json  package.json  server.js
code-viz/parser/: extract.py
code-viz/public/: app.js  index.html  metadata.json
code-viz/scripts/: sync-vendor-libs.js
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
docs/: E阶段-MCP服务模块实现分析.md  F-stage-implementation.md  INGESTION_PIPELINE.md  VS_CODE_MCP_SETUP.md  项目学习笔记.md
scripts/: evaluate.py  ingest.py  query.py  start_dashboard.py  test_mcp_encoding.py  test_mcp_list.py
src/core/: __init__.py  settings.py  types.py
src/dashboard/: app.py
src/ingestion/: C_LAYER.md  __init__.py  document_manager.py  pipeline.py
src/libs/: B_LAYER.md  __init__.py
src/mcp_server/: __init__.py  __main__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_dashboard_smoke.py  test_data_ingestion.py  test_mcp_client.py  test_recall.py  test_workflow.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json
tests/integration/: __init__.py  test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py  test_metadata_enricher_llm.py  test_structure.py
tests/unit/: __init__.py  (+38 more)
(+115 files in other folders)
