[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "Modular RAG MCP Server"
authors = [
    {name = "Author", email = "author@example.com"}
]
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "mcp>=0.1.0",
    "pyyaml>=6.0",
    "streamlit>=1.28.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "pypdf>=3.0.0",
    "python-multipart>=0.0.5",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"